--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ppagithub"
         tools:ignore="AllowBackup">
+        <receiver
+            android:name=".framework.broadcast.AppBReceiver"
+            android:enabled="true"
+            android:exported="false" />
+
         <activity
             android:name=".ui.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize">
