--- a/ppa_github_favorite/src/main/AndroidManifest.xml
+++ b/ppa_github_favorite/src/main/AndroidManifest.xml
@@ -4,9 +4,12 @@
     package="id.co.ppa_github_favorite">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="id.co.ppa_github.READ_DATABASE" />
     <uses-permission android:name="id.co.ppa_github.WRITE_DATABASE" />
+
+    <queries>
+        <package android:name="id.co.ppa_github" />
+    </queries>
 
     <application
         android:name=".PPAGithubFavorite"
@@ -16,6 +19,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ppagithub"
         tools:ignore="AllowBackup">
+        <receiver android:name=".widget.GitPWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/git_p_widget_info" />
+        </receiver>
+
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +36,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
-    <queries>
-        <package android:name="id.co.ppa_github" />
-    </queries>
+        <service
+            android:name="id.co.ppa_github_favorite.widget.GitPWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+    </application>
 
 </manifest>
