--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
             }
 
             buildConfigField("String", "BASE_URL_GITHUB", "\"https://api.github.com/\"")
-            buildConfigField("String", "AUTHORIZATION", "\"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\"")
+//            buildConfigField("String", "AUTHORIZATION", TODO("add your own github authorization"))
             buildConfigField("String", "CHANNEL_NOTIF", "\"channel_notif1\"")
             buildConfigField("String", "PREF_NAME", "\"pref_name\"")
 
@@ -56,7 +56,6 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
